@@ -1,4 +1,7 @@
 2004-2-22 Seth Burgess <sjburges@gimp.org>
+	* UI/UI.pm: Brushes are here too (grayscale only due to PDB limitation)
+
+2004-2-22 Seth Burgess <sjburges@gimp.org>
 	* UI/UI.pm: Gradients are back in!
 
 2004-2-22 Seth Burgess <sjburges@gimp.org>
